fix: update UT
