# server/src/handler/api/routes/user/user-router.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import type { Container } from "inversify";
 import { buildFindUserHandler } from "./find-user-handler";
+import { buildUploadFileHandler } from "./upload-file-handler";
 
 export const buildUserRouter = ({
   container,
@@ -10,6 +11,8 @@ export const buildUserRouter = ({
   const userRouter = Router({ mergeParams: true });
 
   userRouter.get("/", buildFindUserHandler({ container }));
+
+  userRouter.post("/upload", buildUploadFileHandler({ container }));
 
   return userRouter;
 };
